--- a/AspNetCoreIdentityFido2Passwordless/Areas/Identity/Pages/Account/Login.cshtml
+++ b/AspNetCoreIdentityFido2Passwordless/Areas/Identity/Pages/Account/Login.cshtml
@@ -16,7 +16,7 @@
 <div class="row">
     <div class="col-md-4">
         <section>
-            <form action="/mfa" method="post" id="signin">
+            <form action="#" method="post" id="signin">
                 <input type="hidden" id="RequestVerificationToken" name="RequestVerificationToken" value="@GetAntiXsrfRequestToken()">
                 <div class="mb-3">
                     <label for="username" class="form-label">Email address</label>
