--- a/AspNetCoreIdentityFido2Passwordless/Areas/Identity/Pages/Account/Register.cshtml
+++ b/AspNetCoreIdentityFido2Passwordless/Areas/Identity/Pages/Account/Register.cshtml
@@ -14,7 +14,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form action="/mfa" method="post" id="register">
+        <form action="#" method="post" id="register">
             <input type="hidden" id="RequestVerificationToken" name="RequestVerificationToken" value="@GetAntiXsrfRequestToken()">
             <div class="mb-3">
                 <label for="username" class="form-label">Email address</label>
